k8s/k8s-apache.yaml
apiVersion: v1
kind: Service
metadata:
  name: http
spec:
  type: ClusterIP
  # 파드에 처음 들어왔던 클라이언트 IP를 유지해서 세션 유지
  sessionAffinity: ClientIP
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
  selector:
    app: front
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deploy
  labels:
    app: apache
    tier: front
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: apache
  template:
    metadata:      
      labels:
        app: apache
        tire: front
    spec:
      containers:
        - name: apache
          image: httpd
          ports:
            - containerPort: 80
          livenessProbe:
            initialDelaySeconds: 10
            periodSeconds: 3
            httpGet:
              path: /
              port: 80
