k8s/k8s-ssl-ingres.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ssl-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true" # 80 접근시 443 리다이렉트
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - test.ashworking.click
    secretName: ingress-tls
  rules:
    - host: test.ashworking.click  # alb의 경로기반 라우팅 하는 기준같은거
      http:
        paths:
          - path: /
            pathType: Prefix  # / 시작하는 경로 전부 수용
            backend:          # 트래픽을 전달 할 대상 서비스
              service:
                name: http
                port:
                  number: 80
